<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RPSGame"
    android:background="#ffffff"
    tools:ignore="Overdraw"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/output"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/rps"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/exit"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/exit"></Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#35F8BA"
            android:padding="9dp"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/wins"
                    android:textStyle="bold"
                    android:textColor="#333333"
                    android:textSize="35sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/ties"
                    android:textStyle="bold"
                    android:textColor="#333333"
                    android:textSize="35sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/Losses"
                    android:textStyle="bold"
                    android:textColor="#333333"
                    android:textSize="35sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/wins"
                    android:textColor="#ffffff"
                    android:textSize="70sp"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ties"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="70sp"
                    android:text="@string/zero"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/losses"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="70sp"
                    android:text="@string/zero"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/percentages"
            android:background="#35F8BA"
            android:padding="8dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="#000000"
                android:text="@string/choice"
                android:textAlignment="center"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textSize="24sp"
                        android:id="@+id/rPer"
                        android:text="@string/rocks"
                        android:textColor="#ffffff"
                        android:textAlignment="center"
                        android:layout_marginLeft="16dp"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/papers"
                        android:layout_marginStart="16dp"
                        android:id="@+id/pPer"
                        android:textColor="#ffffff"
                        android:textAlignment="center"
                        android:layout_marginLeft="16dp"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/scissor"
                        android:layout_marginStart="16dp"
                        android:id="@+id/sPer"
                        android:textColor="#ffffff"
                        android:textAlignment="center"
                        android:layout_marginLeft="16dp"
                        android:gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/confidence"
                        android:text="@string/con"
                        android:textColor="#08670B"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:gravity="center_horizontal" />
                    <Button
                        android:id="@+id/button4"
                        android:layout_width="150sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:onClick="clear"
                        android:textSize="20sp"
                        android:textColor="#0347F4"
                        android:text="@string/clear"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/icon3" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="13dp">

        <Button
            android:id="@+id/rock"
            style="?android:attr/searchButtonText"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="#F36032"
            android:onClick="userMove"
            android:text="@string/rock"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/paper"
            style="?android:attr/searchButtonText"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginHorizontal="15sp"
            android:layout_weight="1"
            android:background="#3BB8AD"
            android:onClick="userMove"
            android:text="@string/paper"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/scissors"
            style="?android:attr/searchButtonText"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="#E8A33D"
            android:onClick="userMove"
            android:text="@string/scissors"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>